--- a/assets/sass/4-pages/_dashboard.scss
+++ b/assets/sass/4-pages/_dashboard.scss
@@ -234,3 +234,10 @@
         text-transform: uppercase;
     }
 }
+
+.ui-select-bootstrap .selected-item{
+    opacity: 1!important;
+    color: #344051;
+}.only-service .caret{
+    display: none;
+}
