--- a/components/index.html
+++ b/components/index.html
@@ -1843,35 +1843,35 @@
                                 <div class="col-lg-8 col-md-8">
                                     <div class="modal-right">
                                         <div class="row">
-                                            <div class="col-lg-8 col-md-8">
+                                            <div class="col-lg-7 col-md-7">
                                                 <div class="form-group">
                                                     <label class="control-label">Project Members</label>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2">
-                                                        <div class="avatar avatar-m">
+                                                        <div class="avatar avatar-r">
                                                             <img src="../assets/img/user.gif" title="User"/>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-2 col-md-2">
-                                                        <div class="avatar avatar-m">
+                                                        <div class="avatar avatar-r">
                                                             <img src="../assets/img/user.gif" title="User"/>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-2 col-md-2">
-                                                        <div class="avatar avatar-m">
+                                                        <div class="avatar avatar-r">
                                                             <img src="../assets/img/user.gif" title="User"/>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4 col-md-4">
+                                            <div class="col-lg-4 col-md-4 col-lg-offset-1 col-md-offset-1">
                                                 <div class="form-group">
                                                     <label class="control-label">Project Manager</label>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2">
-                                                        <div class="avatar avatar-m">
+                                                        <div class="avatar avatar-r">
                                                             <img src="../assets/img/user.gif" title="User"/>
                                                         </div>
                                                     </div>
