--- a/assets/sass/3-component/_button.scss
+++ b/assets/sass/3-component/_button.scss
@@ -182,6 +182,17 @@
 	width: 100%;
 }
 
+.action-btn{
+	display: inline-block;
+	position: relative;
+	.dropdown-menu{
+		top: auto;
+		bottom: calc(100% + 1px);
+		background-color: transparent;
+		border: 0px solid !important;
+	}
+}
+
 .danger-btn, .danger-btn:focus{
 	color: $white !important;
 	background: $danger;
