--- a/components/index.html
+++ b/components/index.html
@@ -1922,6 +1922,15 @@
                                 </div>
                                 <div class="col-lg-4 col-md-4 text-right">
                                     <a class="btn btn-svg secondary-btn-border" href="#"><i class="fa fa-phone-square"></i> Chat</a>
+                                    
+                                    <span class="action-btn ml-30">
+                                        <button type="button" class="btn silver-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <i class="fa fa-angle-down"></i></button>
+                                        <ul class="dropdown-menu">
+                                            <li><button type="button" class="btn success-btn block-btn">Accept Offer</button></li>
+                                            <li><button type="button" class="btn default-btn block-btn">Counter Offer</button></li>
+                                        </ul>
+                                    </span>
+
                                     <a class="btn danger-btn ml-30" href="#">Close</a>
                                 </div>
                             </div>
