--- a/components/index.html
+++ b/components/index.html
@@ -1942,6 +1942,226 @@
             </div>
         </div>
 
+        <!-- Modals -->
+        <div class="row mb-20 mt-20">
+            <div class="col-lg-12 col-md-12">
+                <h4>Rejected offer</h4>
+                <div class="modal-wrapper">
+                    <div class="custom-modal">
+                        <!-- Modal title -->
+
+                        <div class="custom-modal-title modal-danger">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Rejected Offer</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="custom-modal-body">
+
+                            <div class="row">
+
+                                <div class="col-lg-4 col-md-4 br-1">
+                                    <div class="modal-left">
+
+                                        <div class="thumb-wrapper">
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb active" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs"><div class="add-thumb">+</div></div>
+                                        </div>
+                                        <div class="upload-info success mt-0"><i class="fa fa-info-circle"></i> e.g Newly refurbished room for 2 people</div>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-right">
+                                        <div class="row">
+                                            <div class="col-lg-12 col-md-12">
+                                                <h4>Wedding car for rent</h4>
+                                                <p class="secondary mt-30">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-30">
+                                            <div class="col-lg-3 col-md-3">
+                                                <div class="form-group">
+                                                    <label class="control-label">Start Date</label>
+                                                    <div class="btn block-btn gray-btn"><i class="fa fa-calendar"></i> 12-11-2020</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-3 col-md-3">
+                                                <div class="form-group">
+                                                    <label class="control-label">End Date</label>
+                                                    <div class="btn block-btn gray-btn"><i class="fa fa-calendar"></i> 30-11-2020</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-3 col-md-3">
+                                                <div class="form-group">
+                                                    <label class="control-label">Location</label>
+                                                    <div class="btn block-btn gray-btn"><i class="fa fa-map-marker"></i> Location</div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="custom-modal-footer bt-1 pt-30">
+                            <div class="row">
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-footer-left">By confirming it means you agree with Collabro’s <a>terms and conditions.</a> Alternatively you can check with the seller first.</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 text-right">
+                                    <a class="btn btn-svg secondary-btn-border" href="#"><i class="fa fa-phone-square"></i> Chat</a>                                    
+                                    <a class="btn danger-btn ml-30" href="#">Cancel</a>
+                                    <a class="btn success-btn ml-30" href="#">Proceed</a>
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modals -->
+        <div class="row mb-20 mt-20">
+            <div class="col-lg-12 col-md-12">
+                <h4>Rejected offer</h4>
+                <div class="modal-wrapper">
+                    <div class="custom-modal">
+                        <!-- Modal title -->
+
+                        <div class="custom-modal-title modal-danger">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Reject Offer</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="custom-modal-body">
+
+                            <div class="row">
+
+                                <div class="col-lg-4 col-md-4 br-1">
+                                    <div class="modal-left">
+                                        <p class="secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+
+                                        <div class="row">
+                                            <div class="col-lg-12 col-md-12">
+                                                <h3>Reason For Rejection</h3>
+                                                <div class="form-group mt-20">
+                                                    <input
+                                                        class="magic-radio"
+                                                        type="radio"
+                                                        name="layout"
+                                                        id="magic-radio1"
+                                                        value="option"
+                                                    />
+                                                    <label class="text" for="magic-radio">Unable to meet Buyer Request</label>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input
+                                                        class="magic-radio"
+                                                        type="radio"
+                                                        name="layout"
+                                                        id="magic-radio2"
+                                                        value="option"
+                                                    />
+                                                    <label class="text" for="magic-radio">Overwhelmed with Projects</label>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input
+                                                        class="magic-radio"
+                                                        type="radio"
+                                                        name="layout"
+                                                        id="magic-radio3"
+                                                        value="option"
+                                                    />
+                                                    <label class="text" for="magic-radio">Going on Vacation</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-right">
+                                        <div class="row">
+                                            <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                    <label class="control-label">Other comments (optional)</label>
+                                                    <textarea class="form-control" rows="9" placeholder="Description"></textarea>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="custom-modal-footer bt-1 pt-30">
+                            <div class="row">
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-footer-left">By confirming it means you agree with Collabro’s <a>terms and conditions.</a> Alternatively you can check with the seller first.</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 text-right">
+                                    <a class="btn btn-svg secondary-btn-border" href="#"><i class="fa fa-phone-square"></i> Chat</a>                                    
+                                    <a class="btn danger-btn ml-30" href="#">Cancel</a>
+                                    <a class="btn success-btn ml-30" href="#">Proceed</a>
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer content -->
