--- a/components/index.html
+++ b/components/index.html
@@ -2096,7 +2096,7 @@
                                                         id="magic-radio1"
                                                         value="option"
                                                     />
-                                                    <label class="text" for="magic-radio">Unable to meet Buyer Request</label>
+                                                    <label class="text" for="magic-radio1">Unable to meet Buyer Request</label>
                                                 </div>
                                                 <div class="form-group">
                                                     <input
@@ -2106,7 +2106,7 @@
                                                         id="magic-radio2"
                                                         value="option"
                                                     />
-                                                    <label class="text" for="magic-radio">Overwhelmed with Projects</label>
+                                                    <label class="text" for="magic-radio2">Overwhelmed with Projects</label>
                                                 </div>
                                                 <div class="form-group">
                                                     <input
@@ -2116,7 +2116,7 @@
                                                         id="magic-radio3"
                                                         value="option"
                                                     />
-                                                    <label class="text" for="magic-radio">Going on Vacation</label>
+                                                    <label class="text" for="magic-radio3">Going on Vacation</label>
                                                 </div>
                                             </div>
                                         </div>
