--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -33,6 +33,7 @@
     p{
         margin-top: 20px;
         margin-bottom: 20px;
+        white-space: pre-wrap;
     }
     .check-list{
         width: 100%;
