--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -126,6 +126,7 @@
     width: 40px;
     margin-bottom: 1px;
     line-height: $font-s;
+    text-transform: capitalize;
 }
 
 .contact-info-cards{
