--- a/assets/sass/4-pages/_feeds.scss
+++ b/assets/sass/4-pages/_feeds.scss
@@ -4,6 +4,12 @@
     padding: 16px;
     background: $white;
     height: 470px;
+    &.search-right-wrapper{
+        height: 592px !important;
+        .feed-body{
+            height: calc(100% - 133px);
+        }
+    }
     .feed-head{
         width: 100%;
         float: left;
@@ -30,7 +36,7 @@
         width: 100%;
         float: left;
         padding: 12px 0;
-        height: calc(100% - 153px);
+        height: calc(100% - 93px);
         overflow: hidden auto;
         h4{
             color: $black;
