--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -277,7 +277,7 @@
 .accordion-container
   width: 100%
   float: left
-  padding: 8px
+  padding: 8px 0
   .accordion-wrapper
     width: 100%
     float: left    
