--- a/assets/sass/4-pages/_usermain.scss
+++ b/assets/sass/4-pages/_usermain.scss
@@ -15,7 +15,7 @@
     width: 100%;
     float: left;
     .container-left{
-        width: 70%;
+        width: calc(70% - 16px);
         float: left;
         height: 365px;
         overflow: hidden;
