cms pages updated

--- a/components/info.html
+++ b/components/info.html
@@ -59,7 +59,40 @@
     </header>
 
     <!-- Info page -->
-    <!-- Center content Start -->
+    <div class="info-section">
+        <div class="info-left">
+            <h1>How can we help you?</h1>
+            <div class="left-list">
+                <h3>Earn and Learn</h3>
+                <ul>
+                    <li><a>Open a Shop</a></li>
+                    <li><a>Become a Partner</a></li>
+                    <li><a>Affililation Program</a></li>
+                    <li><a>Bonus Credit</a></li>
+                </ul>
+            </div>
+            <div class="left-list">
+                <h3>Resources</h3>
+                <ul>
+                    <li><a>Licenses and Legal</a></li>
+                    <li><a>Discussions and Forums</a></li>
+                    <li><a>Collections Centre</a></li>
+                    <li><a>Help Center</a></li>
+                    <li><a>Collaboration Service</a></li>
+                    <li><a>Site Maps</a></li>
+                </ul>
+            </div>
+            <div class="left-list">
+                <h3>The Company</h3>
+                <ul>
+                    <li><a>Brand</a></li>
+                    <li><a>Terms and Conditions</a></li>
+                    <li><a>Cookie Policy</a></li>
+                    <li><a>Privacy Policy</a></li>
+                    <li><a>Careers</a></li>                            
+                </ul>
+            </div>
+        </div>
         <div class="info-right">
             <div class="inner-title"><h1>Tripartite Agreement Template</h1></div>
             <div class="special-content">
@@ -80,9 +113,9 @@
                     <p>In consideration of the foregoing, and for other good and valuable consideration, it is agreed that:</p>                        
                     <ol class="right-list">
                         <li>CUSTOMER shall have a lien upon the credit balances in the ACCOUNT to secure the repayment of all funds in the ACCOUNT, which lien shall be superior to any lien or claim of the Bank or Contractor with respect to such account.</li>
-                        <li>The Bank shall not be responsible for (a) the application of funds withdrawn from the ACCOUNT, or (b) determining whether           
+                        <li>The Bank shall not be responsible for (a) the application of funds withdrawn from the ACCOUNT, or (b) determining whether 			
                                 any person is entitled to receive funds ordered or directed to be paid by the Contractor.  Provided that the Bank exercises 
-                                ordinary care, after receipt by the Bank of written directions from the duly authorized representative of CUSTOMER or the   
+                                ordinary care, after receipt by the Bank of written directions from the duly authorized representative of CUSTOMER or the 	
                                 Contractor, the Bank shall act thereon and shall be under no liability to any party hereto or any third party for any 
                                 action taken or not taken in accordance with such written directions, including without limitation any directions in the form of electronic transmission, file, mail or other 
                                 electronic instruction or transaction, including automated clearing house entry, or for the breach of any warranty or representation by CUSTOMER or the Contractor, as 
@@ -95,9 +128,9 @@
                         <p>Quite simply, a tripartite agreement is an agreement between three parties. You could have a tripartite non-disclosure agreement, a tripartite non-compete agreement – you name it. That said, tripartite agreements surface most often when banks are a party to a transaction. For that reason, we have taken some liberty and created a template for that kind of tripartite agreement here. In this tripartite agreement, the bank is acting as a guarantor for the Contractor and is taking on some obligations with respect to the transaction between the Contractor and the Customer. We have no doubt that this tripartite agreement will need some further customization for your specific purpose, as there are endless possibilities. Take care to enlist the support of your legal counsel.</p>
                     </div>
                     <ol class="right-list">
-                        <li>CUSTOMER or its authorized representatives may request copies of the establishment and maintenance of, and transactions in      the ACCOUNT at CUSTOMER’s expense.  Such copies shall be available within a reasonable time. Such records shall be 
+                        <li>CUSTOMER or its authorized representatives may request copies of the establishment and maintenance of, and transactions in 		the ACCOUNT at CUSTOMER’s expense.  Such copies shall be available within a reasonable time. Such records shall be 
                         preserved by the Bank for a period of six (6) years following the close of the calendar year in which the records were created 
-                        unless prior to that time, the Bank has been notified in writing by CUSTOMER that preservation of such records for a longer                 
+                        unless prior to that time, the Bank has been notified in writing by CUSTOMER that preservation of such records for a longer 				
                         period of time is necessary for purposes of litigation or dispute.</li>
 
                         <li>In the event of the service of any writ of attachment, levy of execution, or commencement of garnishment proceedings with 
@@ -154,7 +187,7 @@
                         Agreement among CUSTOMER, the Contractor, and the Bank will automatically be terminated upon the delivery of written 
                         notice to the Bank.  This Tripartite agreement will terminate automatically at the conclusion of the term listed in (6), above.</li>
 
-                        <li>The Bank agrees that it shall not enter into any agreement with any other party to carry out the primary responsibilities of this Tripartite Agreement without the prior        
+                        <li>The Bank agrees that it shall not enter into any agreement with any other party to carry out the primary responsibilities of this Tripartite Agreement without the prior 		
                         written approval of CUSTOMER.</li>
 
                         <li>The Bank, the Contractor, and CUSTOMER agree to comply with the provisions set forth in any attachments or addenda to this Tripartite Agreement, which are 
@@ -241,7 +274,7 @@
                 </div>
             </div>
         </div>
-        <!-- Center content End -->
+    </div>
 
     <!-- Footer content -->
     <div class="footer">
