Title changes updated

--- a/components/info.html
+++ b/components/info.html
@@ -93,6 +93,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Center content Start -->
         <div class="info-right">
             <div class="inner-title"><h1>Tripartite Agreement Template</h1></div>
             <div class="special-content">
@@ -274,6 +275,7 @@
                 </div>
             </div>
         </div>
+        <!-- Center content End -->
     </div>
 
     <!-- Footer content -->
