icon size update

--- a/assets/sass/3-component/_button.scss
+++ b/assets/sass/3-component/_button.scss
@@ -420,7 +420,7 @@ i.color-btn{
 	color: $black;
 	@include border-radius(5px);
 	i{
-		font-size: $font-xl !important;
+		font-size: $font-l !important;
 	}
 }
 
