--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -101,7 +101,7 @@
         a{
             color: $secondary-text;
             i{
-                font-size: $font-xxl;
+                font-size: $font-l;
             }
             &:hover{
                 color: $default;
@@ -151,7 +151,7 @@
                 margin-left: 8px;
             }
             i{
-                font-size: $font-xlx;
+                font-size: $font-l;
             }
         }
         .card-right{
