--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -96,7 +96,7 @@
                 font-size: $font-l;
             }
             i{
-                font-size: $font-xxl;
+                font-size: $font-l;
                 margin-left: 30px;
             }
         }
