--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -30,6 +30,8 @@
 .center-content
     width: calc(100% - 432px)
     float: left
+    &.no-side-bar
+        width: calc(100% - 216px) !important
     // margin: 0 10px
                         
                 
