--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -103,6 +103,11 @@
     }
 }
 
+.product-map{
+    display: block!important;
+    margin-top: 32px;
+}
+
 .price-group{
     width: auto;
     float: left;
