--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -27,7 +27,7 @@ a
   color: $danger !important
 .gold
   color: $gold !important
-.text-white
+.text-white, .white
   color: $white !important
 .orange
   color: $orange !important
