--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -198,3 +198,49 @@
         background: $default !important;
     }
 }
+
+
+/* Mobile Home */
+.main-home{
+    width: 100%;
+    height: 100vh;
+    float: left;
+    background: url(../img/mobile-home.jpg) no-repeat center left;
+    .home-footer{
+        width: 100%;
+        height: 40px;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        background: $white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        .terms{
+            color: $green;
+        }
+    }
+    .home-footer-btn{
+        position: absolute;
+        bottom: 80px;
+        left: 50%;
+        width: calc(100% - 40px);
+        transform: translateX(-50%);
+    }
+}
+
+.mobile-main{
+    width: 100%;
+    height: 100vh;
+    float: left;
+    background: $white;
+    .headertitlenew{
+        color: $default;
+    }
+    .login-modal{
+        max-width: 100%;
+        padding: 15px;
+        border: 0px;
+    }
+}
