--- a/assets/sass/3-component/_mobile-head.scss
+++ b/assets/sass/3-component/_mobile-head.scss
@@ -67,7 +67,7 @@
     .app-content{
         width: 100%;
         float: left;
-        padding-top: 56px;
+        padding-top: 0;
     }
     .corpcontmenu{
         width: 100%;
