--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -205,6 +205,7 @@
     width: 100%;
     height: 100vh;
     float: left;
+    padding-top: 50px;
     background: url(../img/mobile-home.jpg) no-repeat center left;
     .home-footer{
         width: 100%;
@@ -235,6 +236,7 @@
     height: 100vh;
     float: left;
     background: $white;
+    padding-top: 50px;
     .headertitlenew{
         color: $default;
     }
