--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -246,3 +246,20 @@
         border: 0px;
     }
 }
+
+/* Signup */
+.signup{
+    width: 100%;
+    float: left;
+    background: $white;
+    height: 100vh;
+    padding: 50px 15px 15px 15px;
+}
+
+.footercont{
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
