--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -263,3 +263,16 @@
     bottom: 0px;
     left: 0px;
 }
+
+/* Forgot password */
+.forgotpassword{
+    width: 100%;
+    float: left;
+    background: $white;
+    height: 100vh;
+    padding: 50px 15px 15px 15px;
+}
+
+.headertitlenew{
+    color: $default;
+}
